syntax = "proto3";

package reminder;
//option go_package = "github.com/12ilya12/go-proj-mng/reminder-service/gen/reminder";
option go_package = "gen/reminder";

import "google/protobuf/timestamp.proto";

service ReminderService {
    rpc CreateReminder(CreateReminderRequest) returns (Reminder);
    //rpc GetReminders(GetRemindersRequest) returns (stream Reminder);
}

message CreateReminderRequest {
    string task_id = 1; //id задачи из go-proj-mng
    int32 days_before = 2; //за сколько дней напомнить
    string message = 3; //сообщение напоминалки
    google.protobuf.Timestamp deadline = 4;//дэдлайн задачи
}

message Reminder {
    string id = 1;
    string task_id = 2;
    string message = 3;
    google.protobuf.Timestamp remind_at = 4;
    bool triggered = 5;
}